fix top bar spacing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -69,7 +69,7 @@ body {
                 }
 
                 &:not(:first-of-type) {
-                    $margin: 10px;
+                    $margin: 15px;
                     $height: 70%;
                     margin-left: calc($margin * 2);
 
